# attention-k-bots

./: README.md
attention/: CMakeLists.txt  package.xml
attention/include/attention/: attention.hpp
attention/launch/: attention_launch.py
attention/params/: objects.yaml
attention/src/: attention_main.cpp  attention_node.cpp  graph_node_main.cpp
attention/src/attention/: attention.cpp  node_graph.cpp
object_attention/: CMakeLists.txt  package.xml
object_attention/include/node_graph/: node_graph.hpp
object_attention/include/stare_at_object/: stare_at_object.hpp
object_attention/launch/: attention_launch.py  stare_at_object_launch.py
object_attention/params/: params.yaml
object_attention/src/: graph_node_main.cpp
object_attention/src/node_graph/: node_graph.cpp
stare_at_object/: CMakeLists.txt  package.xml
stare_at_object/launch/: stare_at_object_launch.py
stare_at_object/src/: stare_node.cpp
stare_at_object/src/stare_at_object/: stare_at_object.cpp
